<resources>
    <string name="app_name">Woice</string>
    <string name="woice">Woice</string>
    <string name="be_the_voice_of_your_choice">Be the voice of your choice</string>
    <string name="play_home">Play</string>
    <string name="add_story_home">Add Story</string>
    <string name="torch_bearers">Torch Bearers</string>
    <string name="title_activity_play">Play</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Play</string>
    <string name="menu_gallery">Setting</string>
    <string name="menu_slideshow">Contact Us</string>

    <string name="home_second">Home Second</string>
    <string name="setting">Setting</string>
    <string name="contact_us">Contact Us</string>

    <string name="collect">Collect</string>
    <string name="progress"><b>Progress</b></string>
    <string name="add_story">Add story</string>
    <string name="collect_n_badges"><b>Collect \n Badges</b></string>
    <string name="play">Play</string>
    <string name="my_stories">My Stories</string>
    <string name="enter_a_name_for_your_file">Title for your story</string>
    <string name="upload_pdf">Upload PDF</string>
    <string name="no_file_selected">No file selected</string>
    <string-array name="gender">
        <item>Boy</item>
        <item>Girl</item>
        <item>Transgender</item>
    </string-array>
    <string-array name="languages">
        <item>Hindi</item>
        <item>English</item>
        <item>Marathi</item>
        <item>Tamil</item>
        <item>Telugu</item>
        <item>Haryanvi</item>
        <item>Punjabi</item>
    </string-array>
    <string name="ques1">क्या आपने कभी एलियन के बारे में सुना है ??</string>
    <string name="option_2">नहीं </string>
    <string name="option_3">"हाँ "</string>
    <string name="ques2">क्या ये सही था ??</string>
    <string name="ques3">क्या तुम्हे पूछना चाहिए कौन है ??</string>
    <string name="puchna">पूछ लेते हैं </string>
    <string name="noneed">"जरुरी नहीं है "</string>
    <string name="ques4">क्या करूँ जो अंकल चले जाये ??</string>
    <string name="excuse">"बहाना बनाओ "</string>
    <string name="scream">"चिल्लाना शुरू करो "</string>
    <string name="ques5">क्या मैं मम्मी को अंकल के बारे में बता दूँ ??</string>
    <string name="q5opt1">बता देता हूँ</string>
    <string name="q5opt2">रहने देते हैं</string>
    <string name="ques6">क्या मूवीज जो दिखाती हैं , हमें रियल लाइफ में उसे करना चाहिए ??</string>
    <string name="q6opt1">हाँ ,जरूर</string>
    <string name="q6opt2">नहीं , पर कुछ चीज़े अच्छी होती हैं </string>
    <string name="ques7">आपने ये कहाँ सुना है ??</string>
    <string name="q7opt1">मूवी में</string>
    <string name="q7opt2">मम्मी से</string>
    <string name="ques8">क्या मैं भी श्रुति को वैसे ही परेशान करता हूँ, जैसे वो लड़का मम्मी को किया करता था ??</string>
    <string name="q8op1">हाँ,शायद</string>
    <string name="q8op2">नहीं, मैं तो बस इम्प्रेस करना चाहता हूँ</string>
    <string name="ques9">क्या मुझे श्रुति के सामने गलती मान लेनी चाहिए</string>
    <string name="q9op2">नहीं, मेरी गलती नहीं थी</string>
    <string name="q9op1">हाँ, बिलकुल</string>

</resources>
