<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStory">
    <EditText
        android:id="@+id/editTextFileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="80dp"
        android:textColor="#ff4433"


        android:layout_marginTop="114dp"
        android:gravity="center_horizontal"
        android:hint="@string/enter_a_name_for_your_file"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColorHint="#ffa299" />

    <Button
        android:id="@+id/buttonUploadFile"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextFileName"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="78dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/uploadbutton"
        android:text="@string/upload_pdf"
        android:textColor="#FFFFFF" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">


        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />


        <TextView
            android:id="@+id/textViewStatus"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:textColor="#ff4433"

            android:text="@string/no_file_selected"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
    </LinearLayout>



</RelativeLayout>