<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NMomStory">
    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:visibility="visible"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/im1"
        android:layout_width="44dp"
        android:layout_height="41dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/pauseicon" />

    <LinearLayout
        android:id="@+id/pop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="5dp"


        android:orientation="vertical">

        <com.example.woice.Hindi
            android:id="@+id/ques5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:text="@string/ques8"
            android:background="@drawable/edit"
            android:textColor="#000000"
            android:textSize="25sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_marginEnd="0dp"
            android:layout_marginStart="10dp"

            android:orientation="vertical">

            <Button
                android:id="@+id/q5op1"
                android:layout_width="275dp"
                android:layout_height="35dp"

                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/edit"
                android:text="@string/q8op1"
                android:textAlignment="center"
                android:textColor="#000000"
                android:onClick="onnsorry"

                android:textSize="20sp" />

            <Button
                android:id="@+id/q5op2"
                android:layout_width="275dp"
                android:layout_height="35dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edit"
                android:text="@string/q8op2"
                android:textAlignment="center"
                android:textColor="#000000"

                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>